# ltk-manager

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  WORKSHOP_IMPLEMENTATION.md  cliff.toml  linear-discovering-gosling.md  package.json  pnpm-lock.yaml
.claude/knowledge/: tanstack-form.md
.cursor/rules/: frontend-guidelines.mdc
.github/workflows/: ci.yml  release-plz.yml  release.yml
.specify/memory/: constitution.md
scripts/: release.sh
specs/001-ltk-protocol-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ltk-protocol-install/checklists/: requirements.md
specs/001-ltk-protocol-install/contracts/: protocol-schema.md
specs/008-we-recently-mod/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-we-recently-mod/checklists/: requirements.md
src/: main.tsx  routeTree.gen.ts
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  hotkeys.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  deep_link.rs  hotkeys.rs  mod.rs  mods.rs  patcher.rs  profiles.rs  settings.rs  shell.rs  workshop.rs
src-tauri/src/deep_link/: download.rs  mod.rs
src-tauri/src/legacy_patcher/: api.rs  runner.rs
src-tauri/src/mods/: inspect.rs  library.rs  migration.rs  mod.rs  profiles.rs  watcher.rs
src-tauri/src/overlay/: fantome_content.rs  mod.rs  modpkg_content.rs
src-tauri/src/patcher/: api.rs  mod.rs
src-tauri/src/utils/: native.rs
src-tauri/src/workshop/: layers.rs  mod.rs  packing.rs  projects.rs
src/__tests__/lib/: tauri.test.ts
src/__tests__/stores/: devConsole.test.ts  libraryFilter.test.ts  notifications.test.ts  patcherSession.test.ts  storage.test.ts  workshopSelection.test.ts
src/__tests__/utils/: errors.test.ts  query.test.ts  result.test.ts
src/components/: Button.tsx  ButtonGroup.tsx  Checkbox.tsx  Combobox.tsx  Dialog.tsx  FormField.tsx  Kbd.tsx  Menu.tsx  MultiSelect.tsx  NavTabs.tsx  Popover.tsx  Progress.tsx  RadioGroup.tsx  SectionCard.tsx  Select.tsx  Switch.tsx  Tabs.tsx  Toast.tsx  ToastProvider.tsx  Tooltip.tsx  index.ts
src/lib/: tauri.ts  useTauriEvent.ts
src/lib/bindings/: AccentColor.ts  AppError.ts  AppInfo.ts  BulkInstallError.ts  BulkInstallResult.ts  CreateProjectArgs.ts  CslolModInfo.ts  DeepLinkInstallRequest.ts  ErrorCode.ts  FantomeImportProgress.ts  FantomePeekResult.ts  GitImportProgress.ts  HotkeyAction.ts  ImportFantomeArgs.ts  ImportGitRepoArgs.ts  InstallProgress.ts  InstalledMod.ts  LayerInfo.ts  MigrationPhase.ts  MigrationProgress.ts  ModLayer.ts  ModpkgInfo.ts  OverlayProgress.ts  PackFormat.ts  PackProjectArgs.ts  PackResult.ts  PatcherConfig.ts  PatcherPhase.ts  PatcherStatus.ts  Profile.ts  ProfileSlug.ts  ProtocolInstallProgress.ts  SaveProjectConfigArgs.ts  Settings.ts  Theme.ts  ValidationResult.ts  WorkshopAuthor.ts  WorkshopLayer.ts  WorkshopProject.ts  index.ts
src/lib/form/: components.tsx  form-context.ts  index.ts
src/modules/deep-link/api/: index.ts  useDeepLinkListener.ts  useProtocolInstall.ts  useProtocolInstallProgress.ts
src/modules/deep-link/components/: ProtocolInstallDialog.tsx  index.ts
src/modules/migration/api/: useMigrationProgress.ts
src/modules/migration/components/: MigrationSection.tsx
src/modules/patcher/: index.ts
src/modules/patcher/api/: index.ts  keys.ts  useHotkeyEvents.ts  usePatcherError.ts  usePatcherStatus.ts  useStartPatcher.ts  useStopPatcher.ts
src/modules/patcher/components/: StatusBar.tsx
src/modules/settings/components/: AboutSection.tsx  GeneralSection.tsx  HotkeySection.tsx  LeaguePathSection.tsx  MinimizeToTraySection.tsx  ModStorageSection.tsx  PatchingSection.tsx  TrustedDomainsSection.tsx  WorkshopSection.tsx  index.ts
src/modules/shell/components/: DevConsole.tsx  NotificationCenter.tsx  TitleBar.tsx
src/modules/shell/hooks/: useDevLogStream.ts
src/modules/updater/components/: UpdateNotification.tsx
src/modules/workshop/api/: index.ts  keys.ts  useCreateProject.ts  useDeleteProject.ts  useImportFromModpkg.ts  usePackProject.ts  useProjectThumbnail.ts  useRemoveProjectThumbnail.ts  useSaveProjectConfig.ts  useSetProjectThumbnail.ts  useTestProject.ts  (+3 more)
src/pages/: Library.tsx  Settings.tsx
src/routes/: __root.tsx  creator.tsx  workshop.tsx
src/routes/workshop/: $projectName.tsx  index.tsx
src/stores/: deepLink.ts  index.ts  libraryFilter.ts  storage.ts
src/styles/: app.css
src/test/: fixtures.ts
src/utils/: errors.ts  index.ts  query.ts  result.ts
(+24 files in other folders)
