[package]
name = "ltk-manager"
version = "0.1.0"
description = "LeagueToolkit Mod Manager - Desktop app for managing League of Legends mods"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeagueToolkit/league-mod"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

ltk_modpkg = { path = "../../ltk_modpkg" }
ltk_mod_project = { path = "../../ltk_mod_project" }
ltk_mod_core = { path = "../../ltk_mod_core" }

tokio = { version = "1", features = ["full"] }
libloading = "0.9.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
anyhow = "1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
