[package]
name = "ltk-manager"
version = "0.4.0"
description = "LeagueToolkit Mod Manager - Desktop app for managing League of Legends mods"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LeagueToolkit/ltk-manager"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

ltk_modpkg = { version = "0.3", git = "https://github.com/LeagueToolkit/league-mod", features = ["project"] }
ltk_mod_project = { version = "0.3", git = "https://github.com/LeagueToolkit/league-mod" }
ltk_mod_core = { version = "0.1", git = "https://github.com/LeagueToolkit/league-mod" }
ltk_fantome = { version = "0.3", git = "https://github.com/LeagueToolkit/league-mod" }
ltk_overlay = { version = "0.1.2", git = "https://github.com/LeagueToolkit/league-mod" }
ltk_wad = "0.2.12"
ltk_file = "0.2.8"

camino = "1.2"
semver = "1.0"
toml = "0.8"

tokio = { version = "1", features = ["full"] }
libloading = "0.9.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }

thiserror = "2"
anyhow = "1"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
zstd = { version = "0.13", default-features = false }

zip = "2.2.0"
image = "0.25.2"
webp = "0.3"
slug = "0.1"

reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1"
tar = "0.4"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
